Red color contrast fixed

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   --default-primary-color:    #FF9800;
   --light-primary-color:      #FFE0B2;
   --text-primary-color:       #212121;
-  --accent-color:             #FF5252;
+  --accent-color:             #F44336;
   --primary-background-color: #FFE0B2;
   --primary-text-color:       #212121;
   --secondary-text-color:     #757575;
